# react-native-asset-reader

./: RNAssetReader.podspec  package.json
android/: CMakeLists.txt  RNAssetReaderModule.cpp  RNExpertOptionMobileSocketModule.cpp  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/eo/RNExpertOptionMobileSocket/: RNExpertOptionMobileSocketModule.java  RNExpertOptionMobileSocketPackage.java
android/src/main/java/com/ibit/RNAssetReader/: RNAssetReaderModule.java
cpp/: RNAssetReaderJSI.cpp  RNAssetReaderJSI.hpp
example/: App.tsx  metro.config.js  package.json
example/android/app/: build.gradle
example/ios/: main.json
example/ios/MyApp.xcodeproj/: project.pbxproj
ios/RNAssetReader/: RNAssetReader.h  RNAssetReader.mm
ios/RNAssetReader.xcodeproj/: project.pbxproj
ios/RNAssetReader.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/RNAssetReader.xcodeproj/xcuserdata/stepankopylov.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: index.tsx
